# AutoRouter

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_EN.md  cliff.toml  codecov.yml  docker-compose.cliproxy.yml  docker-compose.yaml  docker-compose.yml  drizzle-sqlite.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.e2e.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  tailwind.config.ts  test-pr-comment.md  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  upstreams-page  vitest.config.ts
apps/api/: .env.example  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3759404c81c3_add_key_management_tables.py  a1b2c3d4e5f6_add_key_value_encrypted_column.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  deps.py  encryption.py  exceptions.py  logging.py
apps/api/app/db/: __init__.py  base.py
apps/api/app/models/: __init__.py  db_models.py  schemas.py  upstream.py
apps/api/app/services/: __init__.py  key_manager.py  proxy_client.py  request_logger.py  stats_service.py  upstream_service.py
apps/api/app/utils/: auth_helper.py  data_processor.py
apps/api/tests/: conftest.py  test_admin_api.py  test_encryption.py  test_key_manager.py  test_request_logs.py
apps/api/tests/api/: test_proxy.py
apps/api/tests/core/: test_logging.py
apps/api/tests/services/: test_proxy_client.py
(+1391 files in other folders)
