[project]
name = "autorouter-api"
version = "0.1.0"
description = "FastAPI service for the AutoRouter stack"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "cryptography>=46.0.3",
    "cachetools>=6.2.2",
    "apscheduler>=3.11.1",
    "aiosqlite>=0.21.0",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "ruff>=0.6.0",
    "pyright>=1.1.390",
    "mypy>=1.11.0",
    "pytest-cov>=6.0.0"
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["app"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "none"  # Avoid duplication with Ruff (F401) which can auto-fix.
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
